--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <a href="https://open.spotify.com/user/12133824126">
 
-    <img src="logo.png" id="logo"></a>
+    <img src="images/logo.png" id="logo"></a>
 
 <div id="playlists-wrapper">
     <h1>Playlists</h1>
@@ -14,25 +14,41 @@
     <ul class="playlists">
         <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/1cBg4cE1iSVu8L8FVyRDvx">
-                <img src="MKv1.jpg" width="500" height="500" />
+                <img src="images/MKv1.jpg" width="500" height="500" />
                 <span class="text-content"><span><p>M K Vol. 1</p></span></span>
             </a>
         </li>
-
+        
+        <li>
+            <a href="https://open.spotify.com/user/12133824126/playlist/2VaroSkbiAoF0oXBc6FdYa">
+                <img src="images/MKv2.jpg" width="500" height="500" />
+                <span class="text-content"><span><p>M K Vol. 2</p></span></span>
+            </a>
+        </li>
 
         <li>
+            <a href="https://open.spotify.com/user/12133824126/playlist/5ifsg6TbdEJMrG77Qzoey9">
+                <img src="images/october.jpg" width="500" height="500" />
+                <span class="text-content"><span><p>Monthly Playlist: <br> October</p></span></span>
+            </a>
+        </li>
+
+        <!--        <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/0G8rHHYqKrktKICwO3uUSI">
-                <img src="pp.jpg" width="500" height="500" />
+                <img src="images/pp.jpg" width="500" height="500" />
                 <span class="text-content"><span><p>Passion Pit</p></span></span>
             </a>
         </li>
 
+-->
         <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/0QSN23sxwobTDFVoHiXF0R">
-                <img src="ohwonder.jpg" width="500" height="500" />
+                <img src="images/ohwonder.jpg" width="500" height="500" />
                 <span class="text-content"><span><p>Oh Wonder</p></span></span>
             </a>
         </li>
+
+
 
     </ul>
 
