--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>Matthew Kwong | Spotify</title>
+
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
 
