delete Oh Wonder

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         </li>
 
 -->
-        <li>
-            <a href="https://open.spotify.com/user/12133824126/playlist/0QSN23sxwobTDFVoHiXF0R">
-                <img src="images/ohwonder.jpg" width="500" height="500" />
-                <span class="text-content"><span><p>Oh Wonder</p></span></span>
-            </a>
-        </li>
+        <!--<li>-->
+        <!--    <a href="https://open.spotify.com/user/12133824126/playlist/0QSN23sxwobTDFVoHiXF0R">-->
+        <!--        <img src="images/ohwonder.jpg" width="500" height="500" />-->
+        <!--        <span class="text-content"><span><p>Oh Wonder</p></span></span>-->
+        <!--    </a>-->
+        <!--</li>-->
 
 
 
