fix positioning and add new hover over effect

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/1cBg4cE1iSVu8L8FVyRDvx">
                 <img src="images/MKv1.jpg" width="500" height="500" />
-                <span class="text-content"><span><p>M K Vol. 1</p></span></span>
+                <span class="text"><span><p>M K Vol. 1</p></span></span>
             </a>
         </li>
-        
+
         <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/2VaroSkbiAoF0oXBc6FdYa">
                 <img src="images/MKv2.jpg" width="500" height="500" />
-                <span class="text-content"><span><p>M K Vol. 2</p></span></span>
+                <span class="text"><span><p>M K Vol. 2</p></span></span>
             </a>
         </li>
 
         <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/5ifsg6TbdEJMrG77Qzoey9">
                 <img src="images/october.jpg" width="500" height="500" />
-                <span class="text-content"><span><p>Monthly Playlist: <br> October</p></span></span>
+                <span class="text"><span><p>Monthly Playlist: <br> October</p></span></span>
             </a>
         </li>
 
         <!--        <li>
             <a href="https://open.spotify.com/user/12133824126/playlist/0G8rHHYqKrktKICwO3uUSI">
                 <img src="images/pp.jpg" width="500" height="500" />
-                <span class="text-content"><span><p>Passion Pit</p></span></span>
+                <span class="text"><span><p>Passion Pit</p></span></span>
             </a>
         </li>
 
@@ -46,7 +46,7 @@
         <!--<li>-->
         <!--    <a href="https://open.spotify.com/user/12133824126/playlist/0QSN23sxwobTDFVoHiXF0R">-->
         <!--        <img src="images/ohwonder.jpg" width="500" height="500" />-->
-        <!--        <span class="text-content"><span><p>Oh Wonder</p></span></span>-->
+        <!--        <span class="text"><span><p>Oh Wonder</p></span></span>-->
         <!--    </a>-->
         <!--</li>-->
 
