--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h1 id="title">Follow me on Spotify </h1>
 
-<a href="https://open.spotify.com/user/12133824126">
+<a href="https://open.spotify.com/user/matthewkwong">
 
     <img src="images/logo.png" id="logo"></a>
 
@@ -15,21 +15,21 @@
 
     <ul class="playlists">
         <li>
-            <a href="https://open.spotify.com/user/12133824126/playlist/1cBg4cE1iSVu8L8FVyRDvx">
+            <a href="https://open.spotify.com/user/matthewkwong/playlist/4QmtK2MTx5r2jcRiRnQlVD">
                 <img src="images/MKv1.jpg" width="500" height="500" />
                 <span class="text"><span><p>M K Vol. 1</p></span></span>
             </a>
         </li>
 
         <li>
-            <a href="https://open.spotify.com/user/12133824126/playlist/2VaroSkbiAoF0oXBc6FdYa">
+            <a href="https://open.spotify.com/user/matthewkwong/playlist/1aM7k7YaLGhFBZrwN2qvdh">
                 <img src="images/MKv2.jpg" width="500" height="500" />
                 <span class="text"><span><p>M K Vol. 2</p></span></span>
             </a>
         </li>
 
         <li>
-            <a href="https://open.spotify.com/user/12133824126/playlist/5ifsg6TbdEJMrG77Qzoey9">
+            <a href="https://open.spotify.com/user/matthewkwong/playlist/1j3YMAfIlQnBevqwfa9vub">
                 <img src="images/oct.jpg" width="500" height="500" />
                 <span class="text"><span><p>Monthly Playlist: <br> October</p></span></span>
             </a>
@@ -49,9 +49,6 @@
         <!--        <span class="text"><span><p>Oh Wonder</p></span></span>-->
         <!--    </a>-->
         <!--</li>-->
-
-
-
     </ul>
 
 </div>
